--- a/halo2-circuits/Cargo.toml
+++ b/halo2-circuits/Cargo.toml
@@ -9,13 +9,14 @@ name = "halo2_circuits"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-halo2-base = { branch = "main", default-features = false, features = ["halo2-pse", "display"], git = "https://github.com/zkwebauthn/halo2-lib.git" }
-halo2-ecc = { branch = "main", default-features = false, features = ["halo2-pse", "display"], git = "https://github.com/zkwebauthn/halo2-lib.git" }
+halo2-base = { branch = "feat/secp256r1", default-features = false, features = ["halo2-pse", "display"], git = "https://github.com/ttyhgo/halo2-lib.git" }
+halo2-ecc = { branch = "feat/secp256r1", default-features = false, features = ["halo2-pse", "display"], git = "https://github.com/ttyhgo/halo2-lib.git" }
 # halo2-dynamic-sha256 = { git = "https://github.com/zkemail/halo2-dynamic-sha256.git", version = "0.1.0", branch = "main" }
-snark-verifier = { git = "https://github.com/zkwebauthn/snark-verifier", branch = "v2023_01_20_secp256r1" }
+snark-verifier = { git = "https://github.com/scroll-tech/snark-verifier", branch = "develop" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
 ark-std = { version = "0.3.0", features = ["print-trace"] }
 regex = "1.8.1"
 hex = "0.4.3"
+ethereum-types = { version = "0.14", default-features = false, features = ["std"] }
